<resources>
    <!-- Name of the application -->
    <string name="app_name">Contacts</string>

    <!--  Title quick add form  -->
    <string name="add_new_contact">Add New Contact</string>


    <string name="msg_form_validation">please checking all field</string>
    <string name="msg_success_add">contact added successfully</string>
    <string name="msg_success_remove">contact removed successfully</string>
    <string name="msg_success_edit">update successfully</string>

    <!-- Action buttons for from add or update -->
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="call">Call</string>
    <string name="text">Text</string>

    <!-- Form add new contact or edit existing contact -->
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="note">Note</string>
    <string name="job">Job</string>

    <!--  Hint of search view  -->
    <string name="search">Search</string>

    <!-- Types of different contacts -->
    <string name="family">Family</string>
    <string name="work">Work</string>
    <string name="friend">Friend</string>

    <!-- Description image -->
    <string name="image_contact_description">Contact image</string>
    <string name="remove_confirmation">if you want remove this contact?</string>
    <string name="remove_contact">Remove Contact</string>
    <string name="remove">Remove</string>
    <string name="not_found">not found</string>


</resources>
