<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".EditFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primaryDarkColor"
        android:theme="@style/AppTheme.AppBarOverlay">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleGravity="top"
            app:expandedTitleMarginStart="48dp"
            app:expandedTitleMarginTop="200dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/image_contact_description"
                android:minHeight="200dp"
                android:paddingTop="48dp"
                android:paddingBottom="48dp"
                android:scaleType="centerCrop"
                android:src="@drawable/person_150dp"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.5" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:backgroundTint="@color/primaryTextColor"
                app:layout_collapseMode="pin"
                app:navigationIcon="@drawable/ic_close">

                <TextView
                    android:id="@+id/save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="right"
                    android:layout_marginRight="24dp"
                    android:fontFamily="@font/baloo_bhai"
                    android:padding="8dp"
                    android:text="@string/save"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="16sp" />

            </androidx.appcompat.widget.Toolbar>


        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chips"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/family" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_work"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/work" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_friend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/friend" />


            </com.google.android.material.chip.ChipGroup>

            <ScrollView
                android:id="@+id/form_add"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/chips">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="24dp">

                    <!-- First name -->
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/first_name"
                        app:endIconMode="clear_text"
                        app:hintTextColor="@color/primaryTextColorVariant"
                        app:startIconDrawable="@drawable/ic_person_add">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/first_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:focusableInTouchMode="true"
                            android:imeOptions="actionNext"
                            android:inputType="textPersonName"
                            android:maxLength="50"
                            android:nextFocusForward="@id/phone"
                            android:singleLine="true" />

                    </com.google.android.material.textfield.TextInputLayout>
                    <!-- Last name -->
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/last_name"
                        app:boxCornerRadiusTopEnd="0dp"
                        app:boxCornerRadiusTopStart="0dp"
                        app:endIconMode="clear_text"
                        app:errorEnabled="true"
                        app:hintTextColor="@color/primaryTextColorVariant"
                        app:startIconDrawable="@drawable/ic_person_add"
                        app:startIconTint="@android:color/transparent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/last_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:focusableInTouchMode="true"
                            android:imeOptions="actionNext"
                            android:inputType="textPersonName"
                            android:maxLength="50"
                            android:singleLine="true" />
                    </com.google.android.material.textfield.TextInputLayout>
                    <!-- Phone number -->
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:hint="@string/phone"
                        app:endIconMode="clear_text"
                        app:hintTextColor="@color/primaryTextColorVariant"
                        app:startIconDrawable="@drawable/ic_phone">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/phone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:focusable="true"
                            android:focusableInTouchMode="true"
                            android:imeOptions="actionDone"
                            android:inputType="phone"
                            android:maxLines="24"
                            android:singleLine="true" />

                    </com.google.android.material.textfield.TextInputLayout>
                    <!-- Email  -->
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:hint="@string/email"
                        app:endIconMode="clear_text"
                        app:hintTextColor="@color/primaryTextColorVariant"
                        app:startIconDrawable="@drawable/ic_email_24dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:focusable="true"
                            android:focusableInTouchMode="true"
                            android:imeOptions="actionDone"
                            android:inputType="textEmailAddress"
                            android:maxLines="24"
                            android:singleLine="true" />

                    </com.google.android.material.textfield.TextInputLayout>
                    <!-- Job -->
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:hint="@string/job"
                        app:endIconMode="clear_text"
                        app:hintTextColor="@color/primaryTextColorVariant"
                        app:startIconDrawable="@drawable/ic_job_24dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/job"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:focusableInTouchMode="true"
                            android:imeOptions="actionNext"
                            android:inputType="textPersonName"
                            android:maxLength="50"
                            android:singleLine="true" />
                    </com.google.android.material.textfield.TextInputLayout>
                    <!-- Note or Description -->
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:hint="@string/note"
                        app:endIconMode="clear_text"
                        app:hintTextColor="@color/primaryTextColorVariant">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/note"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:focusableInTouchMode="true"
                            android:gravity="top|left"
                            android:imeOptions="actionDone"
                            android:inputType="textMultiLine"
                            android:lines="5"
                            android:maxLines="5"
                            android:minLines="3"
                            android:scrollbars="vertical" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

            </ScrollView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>