<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".DetailFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primaryDarkColor"
        android:theme="@style/AppTheme.AppBarOverlay">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleGravity="top"
            app:expandedTitleMarginStart="48dp"
            app:expandedTitleMarginTop="200dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
            app:scrimAnimationDuration="200">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/image_contact_description"
                android:minHeight="200dp"
                android:paddingTop="48dp"
                android:paddingBottom="48dp"
                android:scaleType="centerCrop"
                android:src="@drawable/person_150dp"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.5" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:backgroundTint="@color/primaryTextColor"
                app:layout_collapseMode="pin"
                app:navigationIcon="@drawable/ic_arrow_back_24dp">

                <TextView
                    android:id="@+id/edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="end"
                    android:layout_marginRight="24dp"
                    android:fontFamily="@font/baloo_bhai"
                    android:padding="8dp"
                    android:text="@string/edit"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="16sp" />

            </androidx.appcompat.widget.Toolbar>


        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageView
                android:id="@+id/message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:padding="8dp"
                android:src="@drawable/ic_message"
                app:layout_constraintEnd_toStartOf="@id/call"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text"
                app:layout_constraintEnd_toEndOf="@id/message"
                app:layout_constraintStart_toStartOf="@id/message"
                app:layout_constraintTop_toBottomOf="@id/message" />

            <ImageView
                android:id="@+id/call"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:padding="8dp"
                android:src="@drawable/ic_call"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/message"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_call"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/call"
                app:layout_constraintEnd_toEndOf="@id/call"
                app:layout_constraintStart_toStartOf="@id/call"
                app:layout_constraintTop_toBottomOf="@id/call" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/barrier"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="txt_call,txt_message" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chips"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/barrier">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/family" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_work"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/work" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_friend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/friend" />


            </com.google.android.material.chip.ChipGroup>

            <ScrollView
                android:id="@+id/form_add"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/chips">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingVertical="24dp"
                    android:paddingStart="34dp"
                    android:paddingEnd="24dp">

                    <!-- Phone number -->
                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:clickable="true"
                        android:paddingStart="16dp">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <ImageView
                                android:id="@+id/img_phone"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@drawable/ic_phone"
                                android:backgroundTint="@color/primaryTextColorVariant"
                                app:layout_constraintBottom_toTopOf="@id/txt_phone"
                                app:layout_constraintEnd_toEndOf="@id/txt_phone"
                                app:layout_constraintStart_toStartOf="@id/txt_phone"
                                app:layout_constraintTop_toTopOf="parent" />

                            <TextView
                                android:id="@+id/txt_phone"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="16dp"
                                android:text="@string/phone"
                                android:textColor="@color/design_default_color_secondary_variant"
                                android:textSize="10sp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@id/img_phone" />

                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/phone"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="24dp"
                                android:padding="16dp"
                                android:textColor="@color/primaryTextColor"
                                android:textSize="22sp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintStart_toEndOf="@id/txt_phone"
                                app:layout_constraintTop_toTopOf="parent" />

                        </androidx.constraintlayout.widget.ConstraintLayout>
                    </com.google.android.material.card.MaterialCardView>

                    <!-- Email  -->
                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:clickable="true"
                        android:paddingStart="16dp">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <ImageView
                                android:id="@+id/img_email"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@drawable/ic_email_24dp"
                                android:backgroundTint="@color/primaryTextColorVariant"
                                app:layout_constraintBottom_toTopOf="@id/txt_email"
                                app:layout_constraintEnd_toEndOf="@id/txt_email"
                                app:layout_constraintStart_toStartOf="@id/txt_email"
                                app:layout_constraintTop_toTopOf="parent" />

                            <TextView
                                android:id="@+id/txt_email"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="16dp"
                                android:text="@string/email"
                                android:textColor="@color/design_default_color_secondary_variant"
                                android:textSize="10sp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@id/img_email" />

                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/email"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="24dp"
                                android:padding="16dp"
                                android:textColor="@color/primaryTextColor"
                                android:textSize="22sp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintStart_toEndOf="@id/txt_email"
                                app:layout_constraintTop_toTopOf="parent" />

                        </androidx.constraintlayout.widget.ConstraintLayout>
                    </com.google.android.material.card.MaterialCardView>

                    <!-- Job -->
                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:clickable="true"
                        android:paddingStart="16dp">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <ImageView
                                android:id="@+id/img_job"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@drawable/ic_job_24dp"
                                android:backgroundTint="@color/primaryTextColorVariant"
                                app:layout_constraintBottom_toTopOf="@id/txt_job"
                                app:layout_constraintEnd_toEndOf="@id/txt_job"
                                app:layout_constraintStart_toStartOf="@id/txt_job"
                                app:layout_constraintTop_toTopOf="parent" />

                            <TextView
                                android:id="@+id/txt_job"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="16dp"
                                android:text="@string/job"
                                android:textColor="@color/design_default_color_secondary_variant"
                                android:textSize="10sp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@id/img_job" />

                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/job"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="24dp"
                                android:padding="16dp"
                                android:textColor="@color/primaryTextColor"
                                android:textSize="22sp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintStart_toEndOf="@id/txt_job"
                                app:layout_constraintTop_toTopOf="parent" />

                        </androidx.constraintlayout.widget.ConstraintLayout>
                    </com.google.android.material.card.MaterialCardView>

                    <!-- Note or Description -->
                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="8dp"
                        android:clickable="true"
                        android:paddingStart="16dp">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:id="@+id/txt_note"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="16dp"
                                android:layout_marginTop="16dp"
                                android:text="@string/note"
                                android:textColor="@color/design_default_color_secondary_variant"
                                android:textSize="12sp"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/note"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="24dp"
                                android:padding="24dp"
                                android:textColor="@color/primaryTextColor"
                                android:textSize="22sp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintStart_toEndOf="@id/txt_note"
                                app:layout_constraintTop_toTopOf="parent" />

                        </androidx.constraintlayout.widget.ConstraintLayout>
                    </com.google.android.material.card.MaterialCardView>

                </LinearLayout>

            </ScrollView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>